added product activity not working

--- a/Kites-Yasmin/res/layout/activity_main.xml
+++ b/Kites-Yasmin/res/layout/activity_main.xml
@@ -6,14 +6,14 @@
     android:keepScreenOn="true" >
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/startButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:onClick="onBegin"
         android:text="@string/text_start"
-        android:textColor="#fff" />
+        android:textColor="#fff"
+        android:onClick="onStartButtonClicked" />
 
     <ImageView
         android:id="@+id/imageView1"
