--- a/Kites-Yasmin/res/layout/activity_products.xml
+++ b/Kites-Yasmin/res/layout/activity_products.xml
@@ -11,7 +11,7 @@
     </ListView>
 
     <ProgressBar
-        android:id="@+id/productPB"
+        android:id="@+id/categoryPB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
