--- a/Kites-Yasmin/res/layout/activity_main.xml
+++ b/Kites-Yasmin/res/layout/activity_main.xml
@@ -11,45 +11,56 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:onClick="onStartButtonClicked"
         android:text="@string/text_start"
-        android:textColor="#fff"
-        android:onClick="onStartButtonClicked" />
+        android:background="#fff"
+        android:alpha="0.7" />
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="match_parent"
+    <ScrollView
+        android:id="@+id/mainScroll"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/startButton"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:alpha="0.5"
         android:background="#fff"
-        android:src="@drawable/market_analysis_icon"
-        tools:ignore="ContentDescription" />
+        android:alpha="0.5" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView1"
-        android:layout_centerHorizontal="true"
-        android:alpha="0.5"
-        android:background="#fff"
-        android:gravity="center"
-        android:text="@string/title_activity_main"
-        android:textColor="#000"
-        android:textSize="26sp" />
+        <RelativeLayout
+            android:id="@+id/mainRelative"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:alpha="0.5"
-        android:background="#fff"
-        android:gravity="center"
-        android:text="@string/text_welcome"
-        android:textColor="#000"
-        android:textSize="18sp" />
+            <ImageView
+                android:id="@+id/imageView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/market_analysis_icon"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView1"
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:text="@string/title_activity_main"
+                android:textColor="#950"
+                android:textSize="34sp" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/textView1"
+                android:gravity="center"
+                android:text="@string/text_welcome"
+                android:textColor="#000"
+                android:textSize="18sp" />
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
