--- a/Kites-Yasmin/res/layout/item_category.xml
+++ b/Kites-Yasmin/res/layout/item_category.xml
@@ -22,7 +22,8 @@
         android:layout_alignTop="@+id/categoryImage"
         android:layout_toRightOf="@+id/categoryImage"
         android:text="@string/category_name_placeholder"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:paddingLeft="20dp" />
 
     <TextView
         android:id="@+id/categoryDesc"
@@ -30,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/categoryName"
         android:layout_below="@+id/categoryName"
-        android:text="@string/category_name_placeholder" />
+        android:text="@string/category_name_placeholder"
+        android:paddingLeft="20dp" />
 
 </RelativeLayout>
