--- a/Kites-Yasmin/res/layout/item_product.xml
+++ b/Kites-Yasmin/res/layout/item_product.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:contentDescription="@string/category_name_placeholder"/>
+        android:contentDescription="@string/product_name_placeholder"/>
 
     <TextView
         android:id="@+id/productName"
@@ -21,8 +21,9 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/productImage"
         android:layout_toRightOf="@+id/productImage"
-        android:text="@string/category_name_placeholder"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:text="@string/product_name_placeholder"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:paddingLeft="20dp" />
 
     <TextView
         android:id="@+id/productDesc"
@@ -30,7 +31,18 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/productName"
         android:layout_below="@+id/productName"
-        android:text="@string/category_name_placeholder" />
-    
+        android:text="@string/category_name_placeholder"
+        android:paddingLeft="20dp" />
+
+    <TextView
+        android:id="@+id/productPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/productName"
+        android:layout_alignBottom="@+id/productName"
+        android:layout_alignParentRight="true"
+        android:text="$$$"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#950" />
 
 </RelativeLayout>
