--- a/Kites-Yasmin/res/menu/main.xml
+++ b/Kites-Yasmin/res/menu/main.xml
@@ -12,5 +12,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_exit" />
+    <item 
+        android:id="@+id/action_cart"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@drawable/cart_icon"
+        android:title="cart"/>
 
 </menu>
