--- a/Kites-Yasmin/res/layout/activity_cart.xml
+++ b/Kites-Yasmin/res/layout/activity_cart.xml
@@ -1,7 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="@drawable/franklin_background" >
+
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/eeee" >
+    </ListView>
+
+    <ProgressBar
+        android:id="@+id/cartPB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="invisible" />
     
+    <RelativeLayout
+        android:id="@+id/eeee"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/checkout"
+        android:layout_centerHorizontal="true"
+        android:alpha="0.5"
+        android:background="#fff"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp" >
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:text="@string/product_tprice_placeholder2"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#950" />
+
+        <TextView
+            android:id="@+id/cartTotalPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="$$$"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#900" />
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/checkout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:alpha="0.7"
+        android:background="#fff"
+        android:onClick="addToCart"
+        android:text="@string/text_checkout" />
 
 </RelativeLayout>
