--- a/Kites-Yasmin/res/layout/item_category.xml
+++ b/Kites-Yasmin/res/layout/item_category.xml
@@ -2,18 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff"
-    android:alpha="0.5" >
-    
+    android:alpha="0.5"
+    android:background="#fff" >
+
     <ImageView
         android:id="@+id/categoryImage"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:contentDescription="@string/category_name_placeholder"/>
+        android:layout_marginTop="10dp"
+        android:contentDescription="@string/category_name_placeholder" />
 
     <TextView
         android:id="@+id/categoryName"
@@ -21,9 +21,9 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/categoryImage"
         android:layout_toRightOf="@+id/categoryImage"
+        android:paddingLeft="20dp"
         android:text="@string/category_name_placeholder"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:paddingLeft="20dp" />
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/categoryDesc"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/categoryName"
         android:layout_below="@+id/categoryName"
-        android:text="@string/category_name_placeholder"
-        android:paddingLeft="20dp" />
+        android:paddingLeft="20dp"
+        android:text="@string/category_name_placeholder" />
 
 </RelativeLayout>
