--- a/Kites-Yasmin/res/layout/activity_cart.xml
+++ b/Kites-Yasmin/res/layout/activity_cart.xml
@@ -7,7 +7,7 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_above="@+id/eeee" >
     </ListView>
 
@@ -24,14 +24,14 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/checkout"
         android:layout_centerHorizontal="true"
-        android:alpha="0.5"
+        android:alpha="0.6"
         android:background="#fff"
         android:paddingLeft="20dp"
         android:paddingRight="20dp" >
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
@@ -57,7 +57,7 @@
         android:layout_centerHorizontal="true"
         android:alpha="0.7"
         android:background="#fff"
-        android:onClick="addToCart"
-        android:text="@string/text_checkout" />
+        android:text="@string/text_checkout"
+        android:onClick="checkout" />
 
 </RelativeLayout>
