--- a/Kites-Yasmin/res/layout/item_cart.xml
+++ b/Kites-Yasmin/res/layout/item_cart.xml
@@ -26,20 +26,11 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/cartProductDesc"
+        android:id="@+id/cartProductQTYLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/cartProductName"
         android:layout_below="@+id/cartProductName"
-        android:paddingLeft="20dp"
-        android:text="@string/product_name_placeholder" />
-
-    <TextView
-        android:id="@+id/cartProductQTYLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/cartProductDesc"
-        android:layout_below="@+id/cartProductDesc"
         android:paddingLeft="20dp"
         android:text="Quantity"
         android:textColor="#950" />
@@ -48,30 +39,33 @@
         android:id="@+id/cartProductQTY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cartProductDesc"
+        android:layout_below="@+id/cartProductName"
         android:layout_toRightOf="@+id/cartProductQTYLabel"
+        android:layout_marginLeft="5dp"
+        android:textColor="#900"
         android:text="###" />
-    
+
     <TextView
         android:id="@+id/cartProductPriceLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cartProductQTYLabel"
         android:layout_alignLeft="@+id/cartProductQTYLabel"
+        android:layout_below="@+id/cartProductQTYLabel"
         android:paddingLeft="20dp"
         android:text="Price"
         android:textColor="#950" />
-    
+
     <TextView
         android:id="@+id/cartProductPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/cartProductQTY"
-        android:layout_toRightOf="@+id/cartProductPriceLabel"
+        android:layout_alignLeft="@+id/cartProductQTY"
+        android:textColor="#900"
         android:text="###" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/cartPlusBtn"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
@@ -79,21 +73,23 @@
         android:layout_alignParentTop="true"
         android:alpha="0.7"
         android:background="#aaa"
-        android:text="+" />
+        android:text="+"
+        android:textSize="24sp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/cartMinusBtn"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/button1"
+        android:layout_below="@+id/cartPlusBtn"
         android:alpha="0.7"
         android:background="#aaa"
-        android:text="-" />
+        android:text="-"
+        android:textSize="24sp" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/CartRemoveBtn"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
@@ -102,6 +98,7 @@
         android:layout_below="@+id/button2"
         android:alpha="0.7"
         android:background="#f00"
-        android:text="X" />
+        android:text="X"
+        android:textSize="20sp" />
 
 </RelativeLayout>
