--- a/Kites-Yasmin/res/layout/item_product.xml
+++ b/Kites-Yasmin/res/layout/item_product.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    android:alpha="0.5" >
+    android:alpha="0.7" >
     
     <ImageView
         android:id="@+id/productImage"
@@ -41,7 +41,7 @@
         android:layout_alignBaseline="@+id/productName"
         android:layout_alignBottom="@+id/productName"
         android:layout_alignParentRight="true"
-        android:text="$$$"
+        android:text="@string/text_hash"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#950" />
 
